Crowding sync & changelog changes

--- a/locales/pt.arb
+++ b/locales/pt.arb
@@ -55,20 +55,20 @@
     "fontAndika": "Andika",
     "fontComfortaa": "Comfortaa",
     "homeSend": "Enviar",
-    "homeReceive": "Receive",
-    "homeFiles": "Files",
-    "shareDownloadAllButton": "Download all (Will skip folders, Requires JavaScript enabled)",
-    "settingsAppearance": "Appearance",
-    "settingsPrivacy": "Privacy",
-    "settingsTracking": "Tracking",
-    "settingsTrackingAllow": "Allow",
-    "settingsTrackingDisable": "Disable",
-    "settingsTheme": "Theme",
-    "settingsThemeSystem": "System",
-    "settingsThemeLight": "Light",
-    "settingsThemeDark": "Dark",
-    "settingsDisableScreenTransitions": "Disable screen transitions",
-    "settingsDisableBlur": "Disable blur",
-    "settingsDisableTracking": "Disable tracking",
-    "settingsTrackingDescription": "Sharik incorporates privacy-respecting tracking to learn more about the audience of the app. We are using the analytics data to plan new features, and prioritize tasks.\n\nThe collected information does not include IP address or any other identifying information."
+    "homeReceive": "Receber",
+    "homeFiles": "Ficheiros",
+    "shareDownloadAllButton": "Descarregar tudo (ignora pastas, requer JavaScript ativado)",
+    "settingsAppearance": "Aparência",
+    "settingsPrivacy": "Privacidade",
+    "settingsTracking": "Rastreamento",
+    "settingsTrackingAllow": "Permitir",
+    "settingsTrackingDisable": "Desativar",
+    "settingsTheme": "Tema",
+    "settingsThemeSystem": "Sistema",
+    "settingsThemeLight": "Claro",
+    "settingsThemeDark": "Escuro",
+    "settingsDisableScreenTransitions": "Desativar transições do ecrã",
+    "settingsDisableBlur": "Desativar desfocagem",
+    "settingsDisableTracking": "Desativar rastreamento",
+    "settingsTrackingDescription": "O Sharik incorpora um rastreamento, que respeita a privacidade, para saber mais sobre os utilizadores da aplicação. Estamos a usar os dados de análise para planear novas funcionalidades e priorizar tarefas.\n\nAs informações recolhidas não incluem o endereço IP ou qualquer outra informação de identificação."
 }
