fix Arabic local name

--- a/locales/ar.arb
+++ b/locales/ar.arb
@@ -22,7 +22,7 @@
     "generalOpenInGithub": "افتح على GitHub",
     "generalLoading": "جاري التحميل",
     "@_INTRO_PAGE": {},
-    "intro1ConnectTitle": "اتصل",
+    "intro1ConnectTitle": "العربية",
     "intro1ConnectDescription": "قم بتوصيل الأجهزة على شبكة الواي فاي. يمكنك أيضًا استخدام نقطة اتصال الهاتف المتنقلة",
     "intro2SendTitle": "إرسال",
     "intro2SendDescription": "يمكنك مشاركة الصور ومقاطع الفيديو والملفات والنصوص",
