Create a translations sync script [re-written in Dart]

--- a/locales/app_de.arb
+++ b/locales/app_de.arb
@@ -1,5 +1,5 @@
 {
-    "@@locale": "de",
+    
     "homeSelectFile": "Datei auswählen",
     "homeSelectApp": "App",
     "homeSelectText": "Text",
@@ -55,20 +55,20 @@
     "fontAndika": "Andika",
     "fontComfortaa": "Comfortaa",
     "homeSend": "Senden",
-    "homeReceive": "Receive",
-    "homeFiles": "Files",
-    "shareDownloadAllButton": "Download all (Will skip folders, Requires JavaScript enabled)",
-    "settingsAppearance": "Appearance",
-    "settingsPrivacy": "Privacy",
-    "settingsTracking": "Tracking",
-    "settingsTrackingAllow": "Allow",
-    "settingsTrackingDisable": "Disable",
-    "settingsTheme": "Theme",
+    "homeReceive": "Erhalten",
+    "homeFiles": "Dateien",
+    "shareDownloadAllButton": "Alle herunterladen (Überspringt Ordner, JavaScript muss aktiviert sein)",
+    "settingsAppearance": "Gestaltung",
+    "settingsPrivacy": "Datenschutz",
+    "settingsTracking": "Verfolgung",
+    "settingsTrackingAllow": "Zulassen",
+    "settingsTrackingDisable": "Deaktivieren",
+    "settingsTheme": "Stil",
     "settingsThemeSystem": "System",
-    "settingsThemeLight": "Light",
-    "settingsThemeDark": "Dark",
-    "settingsDisableScreenTransitions": "Disable screen transitions",
-    "settingsDisableBlur": "Disable blur",
-    "settingsDisableTracking": "Disable tracking",
-    "settingsTrackingDescription": "Sharik incorporates privacy-respecting tracking to learn more about the audience of the app. We are using the analytics data to plan new features, and prioritize tasks.\n\nThe collected information does not include IP address or any other identifying information."
+    "settingsThemeLight": "Hell",
+    "settingsThemeDark": "Dunkel",
+    "settingsDisableScreenTransitions": "Animationen deaktivieren",
+    "settingsDisableBlur": "Unschärfe deaktivieren",
+    "settingsDisableTracking": "Tracking deaktivieren",
+    "settingsTrackingDescription": "Sharik verwendet Privatsphäre orientiertes Tracking um mehr über die Zielgruppen der App zu lernen. Wir nutzen analytische Daten um Funktionen zu planen und Aufgaben in der Produktentwicklung zu priorisieren.\n\nDie Daten sind anonym und beinhalten weder ihre IP-Adresse noch andere nutzerspezifische Identifkatoren."
 }
