--- a/locales/app_es_ES.arb
+++ b/locales/app_es_ES.arb
@@ -1,5 +1,5 @@
 {
-    "@@locale": "es",
+    
     "homeSelectFile": "Seleccione un archivo",
     "homeSelectApp": "Aplicación",
     "homeSelectText": "Texto",
@@ -10,7 +10,7 @@
     "homeUpdates": "Actualizaciones",
     "homeUpdatesTheLatestVersionIsInstalled": "La última versión ya está instalada",
     "homeUpdatesCurrentVersion": "Versión actual",
-    "homeUpdatesLatestVersion": "Última versión",
+    "homeUpdatesLatestVersion": "Versión más reciente",
     "homeUpdatesChangelog": "Registro de cambios",
     "selectAppSearch": "Búsqueda",
     "selectAppHideSystem": "Ocultar aplicaciones del sistema",
@@ -19,20 +19,20 @@
     "introGeneralNext": "SIGUIENTE",
     "generalClose": "Cerrar",
     "generalSend": "Enviar",
-    "generalOpenInGithub": "Ver en Github",
+    "generalOpenInGithub": "Ver en GitHub",
     "generalLoading": "Cargando",
     "@_INTRO_PAGE": {},
-    "intro1ConnectTitle": "CONECTA",
+    "intro1ConnectTitle": "CONECTAR",
     "intro1ConnectDescription": "Conecte dispositivos a través de la misma red Wi-Fi. También puede usar un punto de acceso móvil",
-    "intro2SendTitle": "ENVÍA",
+    "intro2SendTitle": "ENVIAR",
     "intro2SendDescription": "Puede compartir imágenes, vídeos, archivos y texto",
-    "intro3ReceiveTitle": "RECIBE",
+    "intro3ReceiveTitle": "RECIBIR",
     "intro3ReceiveDescription": "Abra el enlace en otro dispositivo desde cualquier navegador web. Si tiene Sharik en ambos dispositivos, también puede usar la función de recibir desde la aplicación",
     "intro4EverywhereTitle": "EN CUALQUIER LUGAR",
-    "intro4EverywhereDescription": "Sharik está disponible para las principales plataformas móviles y de escritorio. Además, es libre, no tiene anuncios y su código se publica en línea.\nHaga clic aquí para saber más",
+    "intro4EverywhereDescription": "Sharik está disponible para las principales plataformas móviles y de escritorio. Además, es gratis, no tiene anuncios y su código es publicado en línea.\nHaga clic aquí para saber más",
     "@_ABOUT_PAGE": {},
     "aboutInstalledVersion": "Versión instalada",
-    "aboutLatestVersion": "Última versión",
+    "aboutLatestVersion": "La versión más reciente",
     "aboutLatestVersionUnknown": "desconocida",
     "aboutCheckForUpdates": "Buscar actualizaciones",
     "aboutUpdate": "Actualización",
@@ -40,7 +40,7 @@
     "aboutOpenSourceLicenses": "Licencias de código abierto",
     "aboutTrackingPolicy": "Política de rastreo",
     "aboutContributors": "Colaboradores",
-    "aboutSharikText": "Sharik es completamente libre y su código se publica en GitHub.\nTodos están invitados a colaborar :>",
+    "aboutSharikText": "Sharik es completamente gratis y su código se publica en GitHub.\nTodos están invitados a contribuir :>",
     "aboutChangelog": "Registro de cambios",
     "aboutLicenses": "Licencias",
     "aboutPrivacyPolicy": "Política de privacidad",
