--- a/locales/app_th.arb
+++ b/locales/app_th.arb
@@ -1,5 +1,5 @@
 {
-    "@@locale": "th",
+    
     "homeSelectFile": "เลือกไฟล์",
     "homeSelectApp": "แอพ",
     "homeSelectText": "ข้อความ",
@@ -55,20 +55,20 @@
     "fontAndika": "Krub",
     "fontComfortaa": "Chakra Petch",
     "homeSend": "ส่ง",
-    "homeReceive": "Receive",
-    "homeFiles": "Files",
-    "shareDownloadAllButton": "Download all (Will skip folders, Requires JavaScript enabled)",
-    "settingsAppearance": "Appearance",
-    "settingsPrivacy": "Privacy",
-    "settingsTracking": "Tracking",
-    "settingsTrackingAllow": "Allow",
-    "settingsTrackingDisable": "Disable",
-    "settingsTheme": "Theme",
-    "settingsThemeSystem": "System",
-    "settingsThemeLight": "Light",
-    "settingsThemeDark": "Dark",
-    "settingsDisableScreenTransitions": "Disable screen transitions",
-    "settingsDisableBlur": "Disable blur",
-    "settingsDisableTracking": "Disable tracking",
-    "settingsTrackingDescription": "Sharik incorporates privacy-respecting tracking to learn more about the audience of the app. We are using the analytics data to plan new features, and prioritize tasks.\n\nThe collected information does not include IP address or any other identifying information."
+    "homeReceive": "รับ",
+    "homeFiles": "ไฟล์",
+    "shareDownloadAllButton": "ดาวน์โหลดทั้งหมด (ยกเว้นโฟลเดอร์ โดยอุปกรณ์ต้องรองรับ JavaScript)",
+    "settingsAppearance": "รูปลักษณ์",
+    "settingsPrivacy": "ความเป็นส่วนตัว",
+    "settingsTracking": "การติดตาม",
+    "settingsTrackingAllow": "ยินยอม",
+    "settingsTrackingDisable": "ไม่ยินยอม",
+    "settingsTheme": "ธีม",
+    "settingsThemeSystem": "ธีมของระบบ",
+    "settingsThemeLight": "สว่าง",
+    "settingsThemeDark": "มืด",
+    "settingsDisableScreenTransitions": "ปิดแอนิเมชั่น",
+    "settingsDisableBlur": "ปิดการเบลอ",
+    "settingsDisableTracking": "ปิดการติดตาม",
+    "settingsTrackingDescription": "Sharik ใช้ระบบการติดตามการใช้งานที่เคารพความเป็นส่วนตัวของคุณ เพื่อวิเคราะห์ข้อมูลเกี่ยวกับผู้ใช้งานของแอพ เราใช้ข้อมูลเหล่านี้เพื่อวางแผนฟีเจอร์ใหม่ ๆ และจัดลำดับความสำคัญของงาน\n\nข้อมูลที่เก็บจะไม่รวมที่อยู่ IP หรือข้อมูลใด ๆ ที่สามารถใช้ระบุตัวตนได้"
 }
