--- a/locales/app_pt_PT.arb
+++ b/locales/app_pt_PT.arb
@@ -1,14 +1,14 @@
 {
-    "@@locale": "pt",
+    
     "homeSelectFile": "Selecionar ficheiro",
     "homeSelectApp": "Aplicação",
     "homeSelectText": "Texto",
     "homeSelectGallery": "Galeria",
-    "homeSelectTextTypeSomeText": "Escreva algum texto",
+    "homeSelectTextTypeSomeText": "Escreve algum texto",
     "homeHistory": "História",
     "homeReceiver": "Receptor",
     "homeUpdates": "Atualizações",
-    "homeUpdatesTheLatestVersionIsInstalled": "Já está instalada a versão mais recente",
+    "homeUpdatesTheLatestVersionIsInstalled": "A versão mais recente já está instalada",
     "homeUpdatesCurrentVersion": "Versão atual",
     "homeUpdatesLatestVersion": "Última versão",
     "homeUpdatesChangelog": "Registo de alterações",
@@ -23,13 +23,13 @@
     "generalLoading": "A carregar",
     "@_INTRO_PAGE": {},
     "intro1ConnectTitle": "CONECTAR",
-    "intro1ConnectDescription": "Conecte os dispositivos à mesma rede Wi-Fi. Também pode usar um ponto de acesso (hotspot) móvel",
+    "intro1ConnectDescription": "Conecta os dispositivos à mesma rede Wi-Fi. Também podes usar um ponto de acesso (hotspot) móvel",
     "intro2SendTitle": "ENVIAR",
-    "intro2SendDescription": "Pode partilhar imagens, vídeos, ficheiros e texto",
+    "intro2SendDescription": "Podes partilhar imagens, vídeos, ficheiros e texto",
     "intro3ReceiveTitle": "RECEBER",
-    "intro3ReceiveDescription": "Abra a hiperligação noutro dispositivo em qualquer navegador da Internet. Se tiver o Sharik instalado em ambos os dispositivos, também pode usar a função de receptor",
+    "intro3ReceiveDescription": "Abre a hiperligação noutro dispositivo em qualquer navegador da Internet. Se tiveres o Sharik instalado em ambos os dispositivos, também podes usar a função de receptor",
     "intro4EverywhereTitle": "EM TODO O LADO",
-    "intro4EverywhereDescription": "O Sharik está disponível para todas as principais plataformas de telemóveis e computadores de mesa. Além disso é gratuito, não tem anúncios e o código-fonte está disponível na Internet.\nClique aqui para saber mais",
+    "intro4EverywhereDescription": "O Sharik está disponível para todas as principais plataformas de telemóveis e computadores fixos. Além disso é gratuito, não tem anúncios e o código-fonte está disponível na Internet.\nClica aqui para saber mais",
     "@_ABOUT_PAGE": {},
     "aboutInstalledVersion": "Versão instalada",
     "aboutLatestVersion": "A última versão",
@@ -47,11 +47,11 @@
     "@_SHARING_PAGE": {},
     "sharingReceiver": "Receptor",
     "sharingNetworkInterfaces": "Interfaces de rede",
-    "sharingSelectNetworkInterface": "Selecione a interface de rede",
+    "sharingSelectNetworkInterface": "Seleciona a interface de rede",
     "sharingCopiedToClipboard": "Copiado para a área de transferência",
     "sharingRecipientNeedsToBeConnected": "O receptor tem de estar conectado\nà mesma rede",
-    "sharingOpenInBrowser": "Agora abra esta hiperligação\nem qualquer navegador da Internet",
-    "sharingConnectToWiFiOrHotspot": "Conecte-se ao Wi-Fi ou configure um ponto de acesso (hotspot) móvel",
+    "sharingOpenInBrowser": "Agora abre esta hiperligação\nem qualquer navegador da Internet",
+    "sharingConnectToWiFiOrHotspot": "Conecta-te ao Wi-Fi ou configura um ponto de acesso (hotspot) móvel",
     "fontAndika": "Andika",
     "fontComfortaa": "Comfortaa",
     "homeSend": "Enviar",
